--- a/src/screens/AccountScreen.module.css
+++ b/src/screens/AccountScreen.module.css
@@ -96,6 +96,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   padding-top: 10px;
+  padding-bottom: 80px;
 }
 .content::-webkit-scrollbar { display: none; }
 
